erDiagram
    USERS {
        int id PK
        string name
        string email UNIQUE
        string password_hash
        datetime created_at
        datetime updated_at
    }
    
    RESUMES {
        int id PK
        int user_id FK
        text original_resume
        text optimized_resume
        datetime uploaded_at
    }
    
    JOBS {
        int id PK
        int user_id FK
        string job_title
        text job_description
        string company_name
        datetime added_at
    }
    
    JOB_MATCHES {
        int id PK
        int user_id FK
        int job_id FK
        int resume_id FK
        float match_score
        text match_details
        datetime calculated_at
    }
    
    APPLICATIONS {
        int id PK
        int user_id FK
        int job_id FK
        string application_status
        string application_link
        datetime applied_at
    }
    
    USERS ||--o{ RESUMES : owns
    USERS ||--o{ JOBS : adds
    USERS ||--o{ JOB_MATCHES : generates
    USERS ||--o{ APPLICATIONS : submits
    JOBS ||--o{ JOB_MATCHES : relates
    RESUMES ||--o{ JOB_MATCHES : used_for
    JOBS ||--o{ APPLICATIONS : tracks
